# cmake-opengl-cicd-template

./: .clang-format  .editorconfig  .gitignore  .releaserc.yml  CMakeLists.txt
.github/workflows/: build.yml  lint.yml  package.yml  release.yml  test.yml
src/: main.cpp
src/tests/: test_main.cpp
